--- a/views/about.ejs
+++ b/views/about.ejs
@@ -59,7 +59,51 @@
 <div id="coding" class="tabcontent">
     <div class="about-p">
         <div class="coding-content">
-            <h1>Coming soon...</h1>
+            <h1>On the road to becoming a <span>pro</span>grammer...</h1>
+            <div class="code-content">
+                <div class="content powershell">
+                    <img class="ps-logo" src="images/ps_logo.png" alt="powershell logo">
+                    <p>
+                        I began my journey with learning a few powershell commands, not only because I wanted to be able to pull computer data almost instantaneously but also I think it's an essential tool that every
+                        IT professional should know. I eventually started building scripts consisting of functions and conditional statements. With this, I started to understand the basic logic
+                        behind programming. After some time, I started building automation scripts for transfering files and finding hard disk space and ram amounts.
+                    </p>
+                </div>
+                <hr>
+                <div class="content web-dev">
+                    <div class="icons">
+                        <i class="fa fa-html5" ></i>
+                        <i class="fab fa-css3-alt"></i>
+                    </div>
+                    <p>
+                        Back when I was in college I took a web-development class for a semester. It was just front-end, static files and no JavaScript so I was already familiar with how
+                        html and css work. But, I wanted to learn JavaScript so that I can have functions and event listeners on my web apps so that I can give it more life; animations.
+                        At first I started an introductory course on Plurarlsite, which was great, but it felt like it wasn't really sticking. A buddy of mine told me about Udemy, so I 
+                        bought a web-development course and it helped a lot. It was a good refresher into html and also how to use JavaScript. After a while, I started learning about back-end 
+                        Development, so I began learning about NodeJS and ExpressJS. How they work and what their functions are. I then learned about templateing engines; peers at work used HandleBars,
+                        but I personally liked EJS more.
+                    </p>
+                    <div class="icons">
+                        <i class="fab fa-js"></i>
+                        <i class="fab fa-node"></i>
+                    </div>
+                </div>
+                <hr>
+                <div class="content python">
+                    <div class="icons">
+                        <i class="fab fa-python"></i>
+                    </div>
+                    <p>
+                        I've always had the dream of building computer games, so I began taking a course on udemy for video game development, but in the midst of learning it I got pretty bored of it.
+                         So, started learning python for more practical reasons, like: task automation and data science. I did achieve my goal of building games with python, although they were basic 
+                         recreation of classic games like snake, turtle crossing, and pong. I also learned how to manipulate files and export them into dictionaries (json format) then to CSVs. It comes 
+                         in handy for apps used for scheduling or record keeping. I also learned how to use APIs and web-scraping. Also using selenium to build bots to perform tasks on the internet like 
+                         running a speed test at https://www.speedtest.net/ and then sending the results to you. I then learned about web development with flask, using janga as a templating engine.
+                    </p>
+                    <i class="fab fa-flask"></i>
+                </div>
+                <h3>For as far as I've come, all the knowledge I've gained, I know that I still have much more to learn. Happy Coding!</h1>
+            </div>
         </div>
     </div>
 </div>
