--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -373,7 +373,7 @@ audio::-webkit-media-controls-play-button {
 }
 
 .coding-content h1, h3 {
-    text-align: center;
+    text-align: justify;
 }
 
 .coding-content span {
